test: add test for topic service for getting a paginated list of topics